tests/baselines/reference/namedImportNonExistentName.errors.txt
tests/cases/compiler/bar.ts(1,10): error TS2305: Module '"./foo"' has no exported member 'Bar'.
tests/cases/compiler/bar.ts(1,15): error TS2305: Module '"./foo"' has no exported member 'toString'.
tests/cases/compiler/bar.ts(3,10): error TS2305: Module '"./foo2"' has no exported member 'a'.
tests/cases/compiler/bar.ts(3,13): error TS2305: Module '"./foo2"' has no exported member 'b'.
tests/cases/compiler/bar.ts(3,19): error TS2305: Module '"./foo2"' has no exported member 'd'.
tests/cases/compiler/bar.ts(3,22): error TS2305: Module '"./foo2"' has no exported member 'toString'.


==== tests/cases/compiler/foo.d.ts (0 errors) ====
    export = Foo;
    export as namespace Foo;
    
    declare namespace Foo {
        function foo();
    }
    
==== tests/cases/compiler/foo2.ts (0 errors) ====
    let x: { a: string; c: string; } | { b: number; c: number; };
    export = x
    
==== tests/cases/compiler/bar.ts (6 errors) ====
    import { Bar, toString, foo } from './foo';
             ~~~
!!! error TS2305: Module '"./foo"' has no exported member 'Bar'.
                  ~~~~~~~~
!!! error TS2305: Module '"./foo"' has no exported member 'toString'.
    foo();
    import { a, b, c, d, toString as foo2String } from './foo2';
             ~
!!! error TS2305: Module '"./foo2"' has no exported member 'a'.
                ~
!!! error TS2305: Module '"./foo2"' has no exported member 'b'.
                      ~
!!! error TS2305: Module '"./foo2"' has no exported member 'd'.
                         ~~~~~~~~
!!! error TS2305: Module '"./foo2"' has no exported member 'toString'.
    c;